@@ -1,8 +1,6 @@
 
 --------------- first first prio -----------------------------------
 
-- ask casper for updated patch
-
 - use sane syntax for ipv6 adresses. the one in example rc is
 crappy.
 
